--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,23 @@
 .holder{
 	display:flex;
 	justify-content:space-between;
-	flex:wrap;
+	flex-wrap:wrap;
+}
+#item1{
+	background-color:green;
+	width:90px;
+	height:90px;
+	font-size:30px;
+}
+#item2{
+	background-color:red;
+	width:90px;
+	height:90px;
+	font-size:30px;
+}
+#item3{
+	background-color:blue;
+	width:90px;
+	height:90px;
+	font-size:30px;
 }
